# llm-audio-app

./: .dockerignore  .env.example.tmp  .env.test  .gitattributes  .gitignore  .jobs  1.0.0  ABSOLUTE_PATHS.bat  ARCHITECTURE_BLUEPRINT.md  CHANGELOG.md  CLEANUP_COMMANDS.md  COMPLETE_FIX.bat  COMPLETE_STARTUP.bat  CONSOLIDATION_PLAN.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DIAGNOSTIC.bat  Dockerfile  EXECUTE_NOW.bat  FINAL_START.bat  FIX_BACKEND.bat  FIX_DEPENDENCIES.bat  FIX_FRONTEND.bat  MANUAL_DEPLOY.bat  MANUAL_START.bat  OPTIMIZE_PROJECT.bat  QUICK_START.bat  README-Android.md  README.md  REVISION_IA_CHANGELOG.md  RUN.bat  RUN_FIXED.bat  RUN_NOW.bat  START_CORRECTED.bat  START_SERVERS.bat  STEP_BY_STEP.bat  SUCCESS_CHECK.bat  TESTING_STRATEGY.md  VERIFY_WORKING.bat  _start_backend.ps1  (+52 more)
android-elite/: ProjectDocumentation.md  README.md  TESTING_PLAN.md  build.gradle.kts  gradle.properties  gradlew.bat  local.properties  settings.gradle.kts
android-emergency/: create-project.ps1
android-native/: local.properties
android-native-fixed/: build-expert.ps1  build.gradle  gradle.properties  settings.gradle
android-nuevo/: build-nuevo.ps1  build.gradle  gradle.properties  settings.gradle
android-simple/: README.md  build-install.ps1  build-simple.ps1  build.gradle  settings.gradle  settings.gradle.kts
archive/: CHECKLIST.md  MIGRATION.md  TECHNOLOGIES.md  frontend_logs_20250624_160529.txt  project_context.txt  repair_log.txt  repair_voice_advance_v3.ps1  start_all.bat  start_all.ps1  start_services.bat  start_services.ps1
backend/: .dockerignore  .env.example  1.0.0  Dockerfile  README.md  __init__.py  backend_setup.ps1  check_env.py  create_test_audio.py  debug_server.py  flask_server.py  main.py  main.py.backup  record_test_audio.py  requirements.txt  run.py  start_backend.sh  start_server.py  test_config.py  test_websocket.py
(+339 files in other folders)
