[tool.poetry]
name = "llm-audio-app"
version = "0.1.0"
description = "End-to-end audio and LLM pipeline"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydub = "^0.25.1"
whisper = "^1.0.0"
edge-tts = "^1.11.0"
TTS = "^0.21.0"
openai = "^1.3.0"
librosa = ">=0.10.0"
sounddevice = "^0.4.6"
soundfile = "^0.12.1"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.3"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.13.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
